--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-git clone https://github.com/your-username/my-website.git
-cd my-website
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,6 +28,7 @@ cd my-website
     </footer>
 </body>
 </html>
+<style>
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -72,6 +71,4 @@ footer {
     width: 100%;
     bottom: 0;
 }
-git add index.html styles.css
-git commit -m "Initial commit with basic website"
-git push origin main
+</style>
